# drem-orchestrator

./: .gitignore  CLAUDE.md  README.md  alembic.ini  go.mod  go.sum  pyproject.toml
alembic/: env.py
docs/: README.md  merge-reliability-findings.md
feature/: reconcile-overhaul.md
journals/: code---MIDI-Clip-Preview->-Add-clip-naming-property-and-…-20260307-165338.md  code---MIDI-Clip-Preview->-Add-clip-naming-property-and-…-20260307-165955.md  code---MIDI-Clip-Preview->-Implement-clip-join-operation-20260307-165121.md  supervisor-20260307-161132.md  supervisor-20260307-171653.md  supervisor-20260307-182715.md  supervisor-20260307-185742.md  supervisor-20260307-190642.md  supervisor-20260307-192300.md  supervisor-20260307-204224.md  supervisor-20260307-204623.md  supervisor-20260307-212204.md  supervisor-20260307-215414.md  supervisor-20260308-074939.md  supervisor-20260308-182408.md  supervisor-20260308-183738.md  supervisor-20260308-183814.md  supervisor-20260308-201923.md  supervisor-20260308-213407.md  supervisor-20260308-213901.md  supervisor-20260308-215037.md  supervisor-journal-automation-lanes-modes.md  supervisor-journal-clip-lifecycle.md  supervisor-journal-main.md  supervisor-journal-midi-clip-preview.md  supervisor-journal-track-freeze-bounce.md  supervisor-journal-vim-arrangement-motions.md  supervisor-journal-vim-operators.md  supervisor-journal-waveform-rendering.md  supervisor-journal.md
prompts/: 01-project-scaffold.md  03-worktree-integration.md  05-agent-runner.md  07-memory-compaction.md
scripts/: bootstrap.sh
tests/: conftest.py  test_agent_prompt.py  test_agent_runner.py  test_api_projects.py  (+14 more)
(+140 files in other folders)
